cabal-version:       >=1.10

name:                axiomh
version:             0.1.0.0
synopsis:            Axioms propver helper
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Carlos Gómez
maintainer:          carliros.g@gmail.com
-- copyright:
category:            Logic
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable hac
  main-is:             Main.hs
  other-modules:
    Engine
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
                     , uu-parsinglib >= 2.9.1.1
                     , optparse-applicative >= 0.14.3.0
  hs-source-dirs:      src
  default-language:    Haskell2010
